Make "Templates" dropdown nav-items plural

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -63,9 +63,9 @@
               Templates
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" th:href="@{/specification/template/find}">Specification</a></li>
-              <li><a class="dropdown-item" th:href="@{/stakeholder/template/find}">Stakeholder</a></li>
-              <li><a class="dropdown-item" th:href="@{/objective/template/find}">Objective</a></li>
+              <li><a class="dropdown-item" th:href="@{/specification/template/find}">Specifications</a></li>
+              <li><a class="dropdown-item" th:href="@{/stakeholder/template/find}">Stakeholders</a></li>
+              <li><a class="dropdown-item" th:href="@{/objective/template/find}">Objectives</a></li>
             </ul>
           </li>
         </ul>
