Revert "Specification Information" heading on details page
this was an artifact from the failed layout change attempts.

--- a/src/main/resources/templates/specification/specificationDetails.html
+++ b/src/main/resources/templates/specification/specificationDetails.html
@@ -24,7 +24,7 @@
     </script>
   </head>
   <body>
-    <h1>Specification Details</h1>
+    <h2>Specification Information</h2>
     <table class="table table-striped mt-2" th:object="${specification}">
       <tr>
         <th>Name</th>
