--- a/src/main/resources/static/resources/css/soam.css
+++ b/src/main/resources/static/resources/css/soam.css
@@ -7768,9 +7768,7 @@ textarea.form-control-lg {
   color: #838789; }
 
 .breadcrumb-nav {
-  background-color: #f1f1f1;
-  border-bottom: 1px solid #DADADA;
-}
+  background-color: #f1f1f1; }
 
 .btn-primary {
   margin-top: 12px;
