--- a/src/main/resources/static/resources/css/header.css
+++ b/src/main/resources/static/resources/css/header.css
@@ -1,7 +1,7 @@
 .navbar {
   border-top: 4px solid #6db33f;
   background-color: #34302d;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   border-bottom: 0;
   border-left: 0;
   border-right: 0; }
@@ -17,7 +17,7 @@
   text-shadow: none;
   font-size: 14px;
   /* line-height: 14px; */
-  padding: 28px 20px;
+  padding: 22px 20px;
   transition: all 0.15s;
   -webkit-transition: all 0.15s;
   -moz-transition: all 0.15s;
@@ -42,5 +42,8 @@
   .navbar-toggle .icon-bar {
     width: 19px;
     height: 3px; }
+
+.breadcrumb-nav {
+  background-color: rgba(0, 0, 0, 0.05); }
 
 /*# sourceMappingURL=../../../../../../target/header.css.map */
