--- a/src/main/resources/templates/stakeholder/stakeholderDetails.html
+++ b/src/main/resources/templates/stakeholder/stakeholderDetails.html
@@ -34,8 +34,9 @@
         <a th:if="${!stakeholder['new']}" class="btn btn-primary ms-2" onclick="if(confirm('Are you sure you want to delete this stakeholder?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
       </div>
     </div>
-    <hr/>
     <p class="mt-4"></p>
+    <hr/>
+    <h2>Objectives</h2>
     <div class="col-md-10">
     <div th:if="${#lists.isEmpty(stakeholder.objectives)}" class="alert alert-warning">No Objectives have been added to this stakeholder.</div>
     <table class="table table-striped" th:if="${!#lists.isEmpty(stakeholder.objectives)}">
