--- a/src/main/scss/header.scss
+++ b/src/main/scss/header.scss
@@ -1,7 +1,7 @@
 .navbar {
   border-top: 4px solid #6db33f;
   background-color: #34302d;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   border-bottom: 0;
   border-left: 0;
   border-right: 0;
@@ -22,7 +22,7 @@
   font-size: 14px;
 
 /* line-height: 14px; */
-  padding: 28px 20px;
+  padding: 22px 20px;
   transition: all 0.15s;
   -webkit-transition: all 0.15s;
   -moz-transition: all 0.15s;
@@ -55,3 +55,5 @@
   }
 
 }
+.breadcrumb-nav {
+  background-color: rgba(0, 0, 0, 0.05); }
