--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -78,22 +78,26 @@
         <li class="breadcrumb-item" th:classappend="${specification == null ? 'active' : ''}">
           <a th:href="@{/}">Home</a>
         </li>
-        <li class="breadcrumb-item" th:with="specificationActive=${stakeholder == null}" th:classappend="${specificationActive ? 'active' : ''}" >
+        <li class="breadcrumb-item" th:with="specificationActive=${stakeholder == null && specificationObjective == null}" th:classappend="${specificationActive ? 'active' : ''}" >
           <a th:if="${specification['new']}">Specifications</a>
 
           <a th:if="${!specificationActive && !specification['new']}" th:text="${specification.name}"
              th:href="@{/specification/__${specification.id}__}">Specification</a>
           <span th:if="${specificationActive && !specification['new']}" th:text="${specification.name}">Specification Name</span>
         </li>
-        <li class="breadcrumb-item"  th:with="stakeholderActive=${objective == null}"  th:if="${stakeholder != null}" th:classappend="${stakeholderActive ? 'active' : ''}"  >
+        <li class="breadcrumb-item"  th:with="stakeholderActive=${stakeholderObjective == null}"  th:if="${stakeholder != null}" th:classappend="${stakeholderActive ? 'active' : ''}"  >
           <a th:if="${stakeholder.name == null}">Stakeholder</a>
           <a th:if="${!stakeholderActive && stakeholder.name != null }" th:text="${stakeholder.name}"
              th:href="@{/specification/__${specification.id}__/stakeholder/__${stakeholder.id}__}">Stakeholder Name</a>
           <span th:if="${stakeholderActive && stakeholder.name != null }" th:text="${stakeholder.name}">StakeholderName</span>
         </li>
-        <li class="breadcrumb-item active" th:if="${objective != null}">
-          <a th:if="${objective.name == null}">Objective</a>
-          <a th:if="${objective.name != null }" th:text="${objective.name}">Objective Name</a>
+        <li class="breadcrumb-item active" th:if="${specificationObjective != null}">
+          <a th:if="${specificationObjective.name == null}">Specification Objective</a>
+          <a th:if="${specificationObjective.name != null }" th:text="${specificationObjective.name}">Specification Objective Name</a>
+        </li>
+        <li class="breadcrumb-item active" th:if="${stakeholderObjective != null}">
+          <a th:if="${stakeholderObjective['new']}">Stakeholder Objective</a>
+          <a th:if="${!stakeholderObjective['new']}" th:text="${stakeholderObjective.specificationObjective.name}">Stakeholder Objective Name</a>
         </li>
       </ol>
     </div>
