--- a/src/main/resources/templates/specification/specificationDetails.html
+++ b/src/main/resources/templates/specification/specificationDetails.html
@@ -24,6 +24,7 @@
         <td th:text="*{priority}"></td>
       </tr>
     </table>
+    <div th:replace="~{fragments/flash :: subFlashMessage}"></div>
     <div class="row">
       <div class="col">
         <a th:href="@{__${specification.id}__/edit}" class="btn btn-primary">
@@ -55,8 +56,30 @@
         </tr>
         </tbody>
     </table>
-    <div th:replace="~{fragments/flash :: subFlashMessage}"></div>
     <a th:href="@{__${specification.id}__/stakeholder/new}" class="btn btn-primary"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add Stakeholder</a>
+    </div>
+    <hr/>
+    <h2>Specification Objectives</h2>
+    <div class="col-md-10">
+      <div th:if="${#lists.isEmpty(specification.specificationObjectives)}" class="alert alert-warning">No Specification Objectives have been added to this specification.</div>
+      <table class="table table-striped" th:if="${!#lists.isEmpty(specification.specificationObjectives)}">
+        <thead>
+        <tr>
+          <th style="width: 350px;">Name</th>
+          <th>Priority</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="specificationObjective : ${specification.specificationObjectives}">
+          <td>
+            <a th:href="@{/specification/__${specification.id}__/specificationObjective/__${specificationObjective.id}__}" th:text="${specificationObjective.name}"/></a>
+          </td>
+          <td th:text="${specificationObjective.priority}"/>
+        </tr>
+        </tbody>
+      </table>
+      <a th:href="@{/specification/__${specification.id}__/specificationObjective/new}" class="btn btn-primary"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add
+        Specification Objective</a>
     </div>
 
     <form id="deleteForm" th:object="${specification}" th:action="@{/specification/__${specification.id}__/delete}" method="post">
