--- a/src/main/resources/templates/specificationobjective/addUpdateSpecificationObjective.html
+++ b/src/main/resources/templates/specificationobjective/addUpdateSpecificationObjective.html
@@ -1,16 +1,16 @@
 <html xmlns:th="https://www.thymeleaf.org"
-  th:replace="~{fragments/layout :: layout (~{::body}, ~{::head},'objectives')}">
+  th:replace="~{fragments/layout :: layout (~{::body}, ~{::head},'specificationObjectives')}">
 <head>
   <script type="text/javascript" th:src="@{/resources/js/soamTemplate.js}"></script>
 </head>
 <body>
-  <h2>Objective</h2>
+  <h2>Specification Objective</h2>
 
-  <form th:object="${objective}" class="form-horizontal" id="add-objective-form" method="post">
-    <input type="hidden" th:field="*{stakeholder}"/>
+  <form th:object="${specificationObjective}" class="form-horizontal" id="add-specification-objective-form" method="post">
+    <input type="hidden" th:field="*{specification}"/>
     <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
       <div th:if="${!#lists.isEmpty(objectiveTemplates)}" th:replace="~{fragments/soamTemplateButton :: templateButton(${objectiveTemplates})}" />
-      <a th:if="${!objective['new']}" class="btn btn-sm btn-primary ms-2" onclick="if(confirm('Are you sure you want to delete this objective?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
+      <a th:if="${!specificationObjective['new']}" class="btn btn-sm btn-primary ms-2" onclick="if(confirm('Are you sure you want to delete this specification objective?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
     </div>
     <div class="form-group has-feedback">
       <input
@@ -25,8 +25,8 @@
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10 d-flex">
         <button class="btn btn-primary" type="submit"
-          th:with="text=${objective['new']} ? 'Add Objective' : 'Update Objective',
-                  icon=${objective['new']} ? 'fa-plus' : 'fa-pencil-square-o'">
+          th:with="text=${specificationObjective['new']} ? 'Add Specification Objective' : 'Update Specification Objective',
+                  icon=${specificationObjective['new']} ? 'fa-plus' : 'fa-pencil-square-o'">
           <i class="fa me-1"  th:classappend="${icon}" aria-hidden="true"></i>
           <span th:text="${text}">Add/Update</span>
         </button>
@@ -34,9 +34,8 @@
       </div>
     </div>
   </form>
-  <form th:if="${!objective['new']}" id="deleteForm" th:object="${objective}" th:action="@{/specification/__${specification.id}__/stakeholder/__${stakeholder.id}__/objective/__${objective.id}__/delete}" method="post">
+  <form th:if="${!specificationObjective['new']}" id="deleteForm" th:object="${specificationObjective}" th:action="@{/specification/__${specification.id}__/specificationObjective/__${specificationObjective.id}__/delete}" method="post">
       <input type="hidden" th:field="*{id}"/>
-      <input type="hidden" th:field="*{stakeholder}"/>
       <input type="hidden" id="delete-name"  th:field="*{name}"/>
   </form>
 </body>
