--- a/src/main/resources/templates/stakeholder/stakeholderDetails.html
+++ b/src/main/resources/templates/stakeholder/stakeholderDetails.html
@@ -36,32 +36,32 @@
     </div>
     <p class="mt-4"></p>
     <hr/>
-    <h2>Objectives</h2>
+    <h2>Stakeholder Objectives</h2>
     <div class="col-md-10">
-    <div th:if="${#lists.isEmpty(stakeholder.objectives)}" class="alert alert-warning">No Objectives have been added to this stakeholder.</div>
-    <table class="table table-striped" th:if="${!#lists.isEmpty(stakeholder.objectives)}">
-      <thead>
-      <tr>
-        <th style="width: 350px;">Name</th>
-        <th>Priority</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr th:each="objective : ${stakeholder.objectives}">
-        <td>
-          <a th:href="@{/specification/__${stakeholder.specification.id}__/stakeholder/__${stakeholder.id}__/objective/__${objective.id}__}" th:text="${objective.name}"/></a>
-        </td>
-        <td th:text="${objective.priority}"/>
-      </tr>
-      </tbody>
-    </table>
-    <div th:replace="~{fragments/flash :: subFlashMessage}"></div>
-    <a th:href="@{/specification/__${stakeholder.specification.id}__/stakeholder/__${stakeholder.id}__/objective/new}" class="btn btn-primary"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add
-      Objective</a>
+      <div th:if="${#lists.isEmpty(stakeholder.stakeholderObjectives)}" class="alert alert-warning">No Stakeholder Objectives have been added to this stakeholder.</div>
+      <table class="table table-striped" th:if="${!#lists.isEmpty(stakeholder.stakeholderObjectives)}">
+        <thead>
+        <tr>
+          <th style="width: 350px;">Name</th>
+          <th>Priority</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="stakeholderObjective : ${stakeholder.stakeholderObjectives}">
+          <td>
+            <a th:href="@{/specification/__${stakeholder.specification.id}__/stakeholder/__${stakeholder.id}__/stakeholderObjective/__${stakeholderObjective.id}__}" th:text="${stakeholderObjective.specificationObjective.name}"/></a>
+          </td>
+          <td th:text="${stakeholderObjective.priority}"/>
+        </tr>
+        </tbody>
+      </table>
+      <div th:replace="~{fragments/flash :: subFlashMessage}"></div>
+      <a th:href="@{/specification/__${stakeholder.specification.id}__/stakeholder/__${stakeholder.id}__/stakeholderObjective/new}" class="btn btn-primary"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add
+        Stakeholder Objective</a>
+    </div>
     </div>
     <form id="deleteForm" th:object="${stakeholder}" th:action="@{/specification/__${specification.id}__/stakeholder/__${stakeholder.id}__/delete}" method="post">
       <input type="hidden" th:field="*{id}"/>
-      <input type="hidden" th:field="*{specification}"/>
       <input type="hidden" id="delete-name"  th:field="*{name}"/>
     </form>
   </body>
