--- a/src/main/resources/templates/specification/addUpdateSpecification.html
+++ b/src/main/resources/templates/specification/addUpdateSpecification.html
@@ -1,15 +1,21 @@
 <html xmlns:th="https://www.thymeleaf.org"
   th:replace="~{fragments/layout :: layout (~{::body}, ~{::head},'specifications')}">
 <head>
-  <script type="text/javascript" th:src="@{/resources/js/soamTemplate.js}"></script>
+  <script type="text/javascript" th:src="@{/resources/js/collectionDropdown.js}"></script>
 </head>
 <body>
   <h2>Specification</h2>
 
   <form th:object="${specification}" class="form-horizontal" id="add-specification-form" method="post">
-<!--    <input type="hidden" th:field="*{stakeholders}" />-->
+    <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
+    <input type="hidden" id="collectionItemId" name="collectionItemId" th:attr="value=${collectionItemId} ?: -1"/>
     <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
-      <div th:if="${!#lists.isEmpty(specificationTemplates)}" th:replace="~{fragments/soamTemplateButton :: templateButton(${specificationTemplates})}" />
+      <span th:if="${specification['new']}">
+        <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specifications}, 'Copy Existing Specification', 'No Specifications defined', 'srcSpecification')}" />
+      </span>
+      <span th:if="${!#lists.isEmpty(specificationTemplates)}" class="ms-2">
+          <div th:replace="~{fragments/templateDropdown :: templateDropdown(${specificationTemplates})}" />
+      </span>
       <a th:if="${!specification['new']}" class="btn btn-sm btn-primary ms-2" onclick="if(confirm('Are you sure you want to delete this specification?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
     </div>
     <div class="form-group has-feedback">
