--- a/src/main/resources/templates/specification/template/addUpdateSpecificationTemplate.html
+++ b/src/main/resources/templates/specification/template/addUpdateSpecificationTemplate.html
@@ -1,14 +1,14 @@
 <html xmlns:th="https://www.thymeleaf.org"
   th:replace="~{fragments/layout :: layout (~{::body}, ~{::head}, 'templates')}">
 <head>
-  <script type="text/javascript" th:src="@{/resources/js/soamTemplate.js}"></script>
+  <script type="text/javascript" th:src="@{/resources/js/collectionDropdown.js}"></script>
 </head>
 <body>
 
   <h2>Specification Template</h2>
   <form th:object="${specificationTemplate}" class="form-horizontal" id="add-specification-form" method="post">
     <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
-      <div th:if="${!#lists.isEmpty(specificationTemplates)}" th:replace="~{fragments/soamTemplateButton :: templateButton(${specificationTemplates})}" />
+      <div th:if="${!#lists.isEmpty(specificationTemplates)}" th:replace="~{fragments/templateDropdown :: templateDropdown(${specificationTemplates})}" />
       <a class="btn btn-sm btn-primary ms-2" th:if="${!specificationTemplate['new']}" onclick="if(confirm('Are you sure you want to delete this specification template?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
     </div>
     <div class="form-group has-feedback">
