--- a/src/main/resources/templates/stakeholder/addUpdateStakeholder.html
+++ b/src/main/resources/templates/stakeholder/addUpdateStakeholder.html
@@ -1,7 +1,7 @@
 <html xmlns:th="https://www.thymeleaf.org"
   th:replace="~{fragments/layout :: layout (~{::body}, ~{::head},'stakeholders')}">
 <head>
-  <script type="text/javascript" th:src="@{/resources/js/soamTemplate.js}"></script>
+  <script type="text/javascript" th:src="@{/resources/js/collectionDropdown.js}"></script>
 </head>
 <body>
   <h2>Stakeholder</h2>
@@ -9,7 +9,7 @@
   <form th:object="${stakeholder}" class="form-horizontal" id="add-stakeholder-form" method="post">
     <input type="hidden" th:field="*{specification}"/>
     <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
-      <div th:if="${!#lists.isEmpty(stakeholderTemplates)}" th:replace="~{fragments/soamTemplateButton :: templateButton(${stakeholderTemplates})}" />
+      <div th:if="${!#lists.isEmpty(stakeholderTemplates)}" th:replace="~{fragments/templateDropdown :: templateDropdown(${stakeholderTemplates})}" />
       <a th:if="${!stakeholder['new']}" class="btn btn-sm btn-primary ms-2" onclick="if(confirm('Are you sure you want to delete this stakeholder?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
     </div>
     <div class="form-group has-feedback">
