--- a/src/main/resources/templates/stakeholderObjective/addUpdateStakeholderObjective.html
+++ b/src/main/resources/templates/stakeholderObjective/addUpdateStakeholderObjective.html
@@ -1,7 +1,7 @@
 <html xmlns:th="https://www.thymeleaf.org"
   th:replace="~{fragments/layout :: layout (~{::body}, ~{::head},'stakeholderObjectives')}">
 <head>
-  <script type="text/javascript" th:src="@{/resources/js/soamTemplate.js}"></script>
+  <script type="text/javascript" th:src="@{/resources/js/collectionDropdown.js}"></script>
 </head>
 <body>
   <h2>Stakeholder Objective</h2>
@@ -9,10 +9,10 @@
   <form th:object="${stakeholderObjective}" class="form-horizontal" id="add-stakeholder-objective-form" method="post">
     <input type="hidden" th:field="*{stakeholder}"/>
     <input type="hidden" th:field="*{specificationObjective}"/>
-    <input type="hidden" id="templateId" name="templateId" th:attr="value=*{specificationObjective.id}"/>
+    <input type="hidden" id="collectionItemId" name="collectionItemId" th:attr="value=*{specificationObjective.id}"/>
     <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
       <span th:if="${stakeholderObjective['new']}">
-        <div th:replace="~{fragments/soamTemplateButton :: templateButton(templates = ${specification.specificationObjectives}, caption = 'Use Specification Objective')}" />
+        <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specification.specificationObjectives}, 'Use Specification Objective', 'No Specification Objectives defined', 'existingSpecificationObjective')}" />
       </span>
       <a th:if="${!stakeholderObjective['new']}" class="btn btn-sm btn-primary ms-2" onclick="if(confirm('Are you sure you want to delete this stakeholder objective?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
     </div>
