--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -66,6 +66,7 @@
               <li><a class="dropdown-item" th:href="@{/specification/template/find}">Specifications</a></li>
               <li><a class="dropdown-item" th:href="@{/stakeholder/template/find}">Stakeholders</a></li>
               <li><a class="dropdown-item" th:href="@{/objective/template/find}">Objectives</a></li>
+              <li><a class="dropdown-item" th:href="@{/templateLink/list}">Template Links</a></li>
             </ul>
           </li>
         </ul>
