--- a/src/main/resources/templates/fragments/templateLinkItemSelectField.html
+++ b/src/main/resources/templates/fragments/templateLinkItemSelectField.html
@@ -1,12 +1,14 @@
 <html>
 <body>
   <form>
-    <th:block th:fragment="select (name, items)">
+    <th:block th:fragment="select (name, items, useAllOption, submitOnChange)">
       <div class="form-group">
         <div class="col-sm-10">
-          <select th:name="${name}" class="w-100">
-            <option th:each="item : ${items}" th:value="${item.id}"
-              th:text="${item.name}">template</option>
+          <select th:field="*{__${name}__}" class="w-100" th:attrappend="onchange = ${submitOnChange}?'this.form.submit()'">
+            <th:block th:if="${useAllOption}">
+              <option value="-1">All</option>
+            </th:block>
+            <option th:each="item : ${items}" th:value="${item.id}" th:text="${item.name}">template</option>
           </select>
         </div>
       </div>
