--- a/src/main/resources/templates/templateLink/templateLinkList.html
+++ b/src/main/resources/templates/templateLink/templateLinkList.html
@@ -5,12 +5,10 @@
 <body>
 
 <h2>Template Links</h2>
-<div class="alert alert-warning" th:if="${#lists.isEmpty(templateLinks) && !isFiltered}">
-    No Template Links have been defined.
-</div>
-<div class="alert alert-warning" th:if="${#lists.isEmpty(templateLinks) && isFiltered}">
-    No Template Links found for selected filters.
-</div>
+<form id="filterForm" th:object="${templateLinkForm}" th:action="@{/templateLink/list}" method="post">
+<input type="hidden" th:name="createNewAction" th:value="@{/templateLink/new}"/>
+<input type="hidden" th:name="deleteAction" th:value="@{/templateLink/delete}"/>
+<input type="hidden" th:field="*{deleteTemplateLinkId}"/>
 <table id="templateLinks" class="table table-striped">
     <thead>
     <tr>
@@ -19,42 +17,57 @@
         <th>Objective Template</th>
         <th></th>
     </tr>
-    </thead>
-    <tbody>
-    <tr th:each="templateLink : ${templateLinks}" th:object="${templateLink}" th:with="formId = 'deleteForm_' + *{id}">
-        <td th:text="*{specificationTemplate.name}"/>
-        <td th:text="*{stakeholderTemplate.name}"/>
-        <td th:text="*{objectiveTemplate.name}"/>
+    <tr>
         <td>
-            <form th:id="${formId}" th:action="@{/templateLink/__*{id}__/delete}" method="post">
-                <input type="hidden" th:name="id" th:value="*{id}"/>
-            </form>
-            <a class="btn btn-sm btn-primary mt-0"
-                th:attr="onclick = ${'if(confirm(''Are you sure you want to delete this template link?'')) document.getElementById(''' + formId + ''').submit()'}">
-                <i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete
-            </a>
+            <input th:replace="~{fragments/templateLinkItemSelectField :: selectFilter ('filterSpecificationTemplate', ${specificationTemplates})}" />
         </td>
+        <td>
+            <input th:replace="~{fragments/templateLinkItemSelectField :: selectFilter ('filterStakeholderTemplate', ${stakeholderTemplates})}" />
+        </td>
+        <td></td>
+        <td></td>
     </tr>
-    <form th:object="${newTemplateLink}" th:action="@{/templateLink/list}" method="post">
-        <input type="hidden" th:name="createNewAction" th:value="@{/templateLink/new}"/>
-        <tr>
+    </thead>
+    <tbody th:with="isFiltered = ${templateLinkForm.filterSpecificationTemplate != null || templateLinkForm.filterStakeholderTemplate != null}">
+        <td colspan="4" th:if="${#lists.isEmpty(templateLinks) && !isFiltered}">
+            <div class="alert alert-warning mb-0">No Template Links have been defined.</div>
+        </td>
+        <td colspan="4" th:if="${#lists.isEmpty(templateLinks) && isFiltered}">
+            <div class="alert alert-warning mb-0">No Template Links found for selected filters.</div>
+        </td>
+        <tr th:each="templateLink : ${templateLinks}" th:object="${templateLink}" th:with="templateLinkId = *{id}">
+            <td th:text="*{specificationTemplate.name}"/>
+            <td th:text="*{stakeholderTemplate.name}"/>
+            <td th:text="*{objectiveTemplate.name}"/>
             <td>
-                <input th:replace="~{fragments/templateLinkItemSelectField :: select ('specificationTemplate', ${specificationTemplates}, true, true)}" />
-            </td>
-            <td>
-                <input th:replace="~{fragments/templateLinkItemSelectField :: select ('stakeholderTemplate', ${stakeholderTemplates}, true, true)}" />
-            </td>
-            <td>
-                <input th:replace="~{fragments/templateLinkItemSelectField :: select ('objectiveTemplate', ${objectiveTemplates}, false, false)}" />
-            </td>
-            <td>
-                <button type="button" class="btn btn-sm btn-primary mt-0"
-                        onclick="this.form.action=this.form.createNewAction.value;this.form.submit()"><i class="fa fa-plus me-1" aria-hidden="true"></i>Add</button>
+                <button class="btn btn-sm btn-primary mt-0" type="button"
+                    th:attr="onclick = ${'if(confirm(''Are you sure you want to delete this template link?'')) { this.form.deleteTemplateLinkId.value=' + templateLinkId + ';this.form.action=this.form.deleteAction.value;this.form.submit(); }'}">
+                    <i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete
+                </button>
             </td>
         </tr>
-    </form>
     </tbody>
+    <tfoot>
+    <tr>
+        <td>
+            <input th:replace="~{fragments/templateLinkItemSelectField :: selectNewItem ('newTemplateLink.specificationTemplate', ${specificationTemplates}, 'fa-plus')}" />
+        </td>
+        <td>
+            <input th:replace="~{fragments/templateLinkItemSelectField :: selectNewItem ('newTemplateLink.stakeholderTemplate', ${stakeholderTemplates}, 'fa-chain')}" />
+        </td>
+        <td>
+            <input th:replace="~{fragments/templateLinkItemSelectField :: selectNewItem ('newTemplateLink.objectiveTemplate', ${objectiveTemplates}, 'fa-chain')}" />
+        </td>
+        <td>
+            <button type="button" class="btn btn-sm btn-primary mt-0"
+                    onclick="this.form.action=this.form.createNewAction.value;this.form.submit()"
+                ><i class="fa fa-plus me-1" aria-hidden="true"></i>Add
+            </button>
+        </td>
+    </tr>
+    </tfoot>
 </table>
+</form>
 <div th:replace="~{fragments/flash :: subFlashMessage}"></div>
 </body>
 </html>
