implemented Create Specification Template from Template common IT utilities consolidated in ITUtils

--- a/src/main/resources/templates/specification/addUpdateSpecification.html
+++ b/src/main/resources/templates/specification/addUpdateSpecification.html
@@ -14,7 +14,7 @@
         <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specifications}, 'Copy Existing Specification', 'No Specifications defined', 'srcSpecification')}" />
       </span>
       <span th:if="${specification['new']}" class="ms-2">
-        <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specificationTemplates}, 'Create from Template', 'No Specification Templates defined', 'srcTemplate')}" />
+        <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specificationTemplates}, 'Create from Template', 'No Specification Templates defined', 'templateDeepCopy')}" />
       </span>
       <span th:if="${!#lists.isEmpty(specificationTemplates)}" class="ms-2">
           <div th:replace="~{fragments/templateDropdown :: templateDropdown(${specificationTemplates})}" />
