--- a/src/main/resources/templates/specification/template/addUpdateSpecificationTemplate.html
+++ b/src/main/resources/templates/specification/template/addUpdateSpecificationTemplate.html
@@ -7,8 +7,15 @@
 
   <h2>Specification Template</h2>
   <form th:object="${specificationTemplate}" class="form-horizontal" id="add-specification-form" method="post">
+    <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
+    <input type="hidden" id="collectionItemId" name="collectionItemId" th:attr="value=${collectionItemId} ?: -1"/>
     <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
-      <div th:if="${!#lists.isEmpty(specificationTemplates)}" th:replace="~{fragments/templateDropdown :: templateDropdown(${specificationTemplates})}" />
+      <span th:if="${specificationTemplate['new']}">
+        <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specificationTemplates}, 'Copy Existing Specification Template', 'No Specification Templates defined', 'templateDeepCopy')}" />
+      </span>
+      <span th:if="${!#lists.isEmpty(specificationTemplates)}" class="ms-2">
+        <div th:replace="~{fragments/templateDropdown :: templateDropdown(${specificationTemplates})}" />
+      </span>
       <a class="btn btn-sm btn-primary ms-2" th:if="${!specificationTemplate['new']}" onclick="if(confirm('Are you sure you want to delete this specification template?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
     </div>
     <div class="form-group has-feedback">
