inline form attributes defined as private static constants

--- a/src/main/resources/templates/specification/specificationList.html
+++ b/src/main/resources/templates/specification/specificationList.html
@@ -13,7 +13,7 @@
   </tr>
   </thead>
   <tbody>
-  <tr th:each="specification : ${listSpecifications}">
+  <tr th:each="specification : ${specifications}">
     <td>
       <a th:href="@{/specification/__${specification.id}__}" th:text="${specification.name}"/></a>
     </td>
