--- a/src/main/resources/templates/objective/template/objectiveTemplateList.html
+++ b/src/main/resources/templates/objective/template/objectiveTemplateList.html
@@ -13,7 +13,7 @@
   </tr>
   </thead>
   <tbody>
-  <tr th:each="objectiveTemplate : ${listObjectiveTemplates}">
+  <tr th:each="objectiveTemplate : ${objectiveTemplates}">
     <td>
       <a th:href="@{/objective/template/__${objectiveTemplate.id}__/edit}" th:text="${objectiveTemplate.name}"/></a>
     </td>
