--- a/src/main/resources/templates/objective/template/addUpdateObjectiveTemplate.html
+++ b/src/main/resources/templates/objective/template/addUpdateObjectiveTemplate.html
@@ -10,7 +10,7 @@
   <h2>Objective Template</h2>
   <form th:object="${objectiveTemplate}" class="form-horizontal" id="add-objective-form" method="post">
     <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
-      <div th:if="${!#lists.isEmpty(objectiveTemplates)}" th:replace="~{fragments/templateDropdown :: templateDropdown(${objectiveTemplates})}" />
+      <div th:replace="~{fragments/templateDropdown :: templateDropdown(${objectiveTemplates})}" />
       <a class="btn btn-sm btn-primary ms-2" th:if="${!objectiveTemplate['new']}" onclick="if(confirm('Are you sure you want to delete this objective template?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
     </div>
     <div class="form-group has-feedback">
