--- a/src/main/resources/templates/specification/template/addUpdateSpecificationTemplate.html
+++ b/src/main/resources/templates/specification/template/addUpdateSpecificationTemplate.html
@@ -15,7 +15,7 @@
       <span th:if="${specificationTemplate['new']}">
         <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specificationTemplates}, 'Copy Existing Specification Template', 'No Specification Templates defined', 'templateDeepCopy')}" />
       </span>
-      <span th:if="${!#lists.isEmpty(specificationTemplates)}" class="ms-2">
+      <span class="ms-2">
         <div th:replace="~{fragments/templateDropdown :: templateDropdown(${specificationTemplates})}" />
       </span>
       <a class="btn btn-sm btn-primary ms-2" th:if="${!specificationTemplate['new']}" onclick="if(confirm('Are you sure you want to delete this specification template?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
