--- a/src/main/resources/templates/stakeholder/template/addUpdateStakeholderTemplate.html
+++ b/src/main/resources/templates/stakeholder/template/addUpdateStakeholderTemplate.html
@@ -10,7 +10,7 @@
   <h2>Stakeholder Template</h2>
   <form th:object="${stakeholderTemplate}" class="form-horizontal" id="add-stakeholder-form" method="post">
     <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
-      <div th:if="${!#lists.isEmpty(stakeholderTemplates)}" th:replace="~{fragments/templateDropdown :: templateDropdown(${stakeholderTemplates})}" />
+      <div th:replace="~{fragments/templateDropdown :: templateDropdown(${stakeholderTemplates})}" />
       <a class="btn btn-sm btn-primary ms-2" th:if="${!stakeholderTemplate['new']}" onclick="if(confirm('Are you sure you want to delete this stakeholder template?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
     </div>
     <div class="form-group has-feedback">
