follow-up fix to broken pagination in the Specification listing page (numeric link did not work)

--- a/src/main/resources/templates/specification/specificationList.html
+++ b/src/main/resources/templates/specification/specificationList.html
@@ -25,7 +25,7 @@
   <span>Pages:</span>
   <span>[</span>
   <span th:each="i: ${#numbers.sequence(1, totalPages)}">
-      <a th:if="${currentPage != i}" th:href="@{'/specification?page=' + ${i}}">[[${i}]]</a>
+      <a th:if="${currentPage != i}" th:href="@{'/specification/list?page=' + ${i}}">[[${i}]]</a>
       <span th:unless="${currentPage != i}">[[${i}]]</span>
     </span>
   <span>]&nbsp;</span>
