implemented SOAM Enums listing with filtering

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -71,6 +71,7 @@
               <li><a class="dropdown-item">Change Owner</a></li>
               <li><a class="dropdown-item" th:href="@{/admin/deleteSpecification/list}">Delete Specification</a></li>
               <li><a class="dropdown-item">Delete Account</a></li>
+              <li><a class="dropdown-item" th:href="@{/admin/soamEnum/list}">Maintain Enums</a></li>
             </ul>
           </li>
         </ul>
