--- a/src/main/resources/templates/stakeholderObjective/addUpdateStakeholderObjective.html
+++ b/src/main/resources/templates/stakeholderObjective/addUpdateStakeholderObjective.html
@@ -19,29 +19,10 @@
       <a th:if="${!stakeholderObjective['new']}" class="btn btn-sm btn-primary ms-2" onclick="if(confirm('Are you sure you want to delete this stakeholder objective?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
     </div>
     <div class="form-group has-feedback">
-      <div class="form-group mb-3">
-        <label class="col-sm-2 control-label">Name</label>
-        <div class="col-sm-10">
-          <div>
-            <input class="form-control" type="text" id="name" th:attr="value=*{specificationObjective.name}" readonly/>
-          </div>
-          <th:block th:if="${#fields.hasErrors('specificationObjective')}">
-            <span
-                    class="fa fa-remove form-control-feedback"
-                    aria-hidden="true"></span>
-            <span class="help-inline" th:errors="*{specificationObjective}">Error</span>
-          </th:block>
-        </div>
-      </div>
-      <div class="form-group mb-3">
-        <label class="col-sm-2 control-label">Description</label>
-        <div class="col-sm-10">
-          <div>
-            <input class="form-control" type="text" id="description" th:attr="value=*{specificationObjective.description}" readonly/>
-          </div>
-        </div>
-      </div>
-
+      <input
+        th:replace="~{fragments/inputField :: readOnly ('Name', 'specificationObjective.name', 'text')}" />
+      <input
+        th:replace="~{fragments/inputField :: readOnly ('Description', 'specificationObjective.description', 'text')}" />
       <input
         th:replace="~{fragments/inputField :: input ('Notes', 'notes', 'textarea')}" />
       <input
