--- a/src/main/resources/templates/admin/soamEnumList.html
+++ b/src/main/resources/templates/admin/soamEnumList.html
@@ -9,19 +9,19 @@
     <table id="soamEnums" class="table table-striped">
         <thead>
         <tr>
-            <th>Enum Id</th>
-            <th>Enum Value</th>
-            <th>Enum Sequence</th>
+            <th>Type</th>
+            <th>Value</th>
+            <th>Sequence</th>
         </tr>
         <tr>
             <td>
-                <input th:replace="~{fragments/selectField :: select ('filterSoamEnumId', ${soamEnumIds}, true, true, 'fa-filter')}"/>
+                <input th:replace="~{fragments/selectField :: select ('filterSoamEnumType', ${soamEnumTypes}, true, true, 'fa-filter')}"/>
             </td>
             <td></td>
             <td></td>
         </tr>
         </thead>
-        <tbody th:with="isFiltered = ${soamEnumForm.filterSoamEnumId != null}">
+        <tbody th:with="isFiltered = ${soamEnumForm.filterSoamEnumType != null}">
         <td colspan="4" th:if="${#lists.isEmpty(soamEnums) && !isFiltered}">
             <div class="alert alert-warning mb-0">No Enums have been defined.</div>
         </td>
@@ -29,7 +29,7 @@
             <div class="alert alert-warning mb-0">No Enums found for selected filters.</div>
         </td>
         <tr th:each="soamEnum : ${soamEnums}" th:object="${soamEnum}">
-            <td th:text="*{enumId}"/>
+            <td th:text="*{type}"/>
             <td>
                 <a th:href="@{/admin/soamEnum/__*{id}__/edit}" th:text="*{name}"/></a>
             </td>
