cleanup in jstree loader main panel shows consistent message when no entity is selected new tree is loaded by default

--- a/src/main/resources/templates/specifications/specifications.html
+++ b/src/main/resources/templates/specifications/specifications.html
@@ -11,10 +11,11 @@
 <body>
 <div class="row h-100">
     <div class="col-4">
+        <h2>Entity Explorer</h2>
         <div id="tree"></div>
     </div>
     <div class="col-8">
-        <div id="main">Main panel</div>
+        <div id="main"></div>
     </div>
 </div>
 </body>
