--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -49,7 +49,7 @@
             <span class="fa fa-home" aria-hidden="true"></span>
             <span>Home</span>
           </li>
-          <li th:replace="~{::menuItem ('/specification/find','specifications','Find Specifications','','Specifications')}">
+          <li th:replace="~{::menuItem ('/specifications2','specifications','Specifications','','Specifications')}">
             <span>Specifications</span>
           </li>
           <li class="nav-item dropdown" >
