--- a/src/main/resources/templates/stakeholder/addUpdateStakeholder2.html
+++ b/src/main/resources/templates/stakeholder/addUpdateStakeholder2.html
@@ -2,7 +2,7 @@
 
 <div th:replace="~{fragments/flash :: flash}"></div>
 <form th:object="${stakeholder}"
-      th:action="@{/specification/__${specification.id}__/stakeholder2/__${stakeholder.id}__/edit}"
+      th:action="${stakeholder['new']} ? @{/specification/__${specification.id}__/stakeholder2/new} : @{/specification/__${specification.id}__/stakeholder2/__${stakeholder.id}__/edit}"
       class="form-horizontal" id="add-stakeholder-form" method="post"
       onsubmit="soamFormSubmit(this);return false;">
     <input type="hidden" th:field="*{specification}"/>
