--- a/src/main/resources/templates/specificationobjective/addUpdateSpecificationObjective2.html
+++ b/src/main/resources/templates/specificationobjective/addUpdateSpecificationObjective2.html
@@ -6,6 +6,9 @@
       class="form-horizontal" id="add-specification-objective-form" method="post"
       onsubmit="soamFormSubmit(this);return false;">
     <input type="hidden" th:field="*{specification}"/>
+    <div th:if="${specificationObjective['new'] && collectionType == 'copyTemplate'}" class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
+        <div th:replace="~{fragments/templateDropdown :: templateDropdown(${objectiveTemplates})}" />
+    </div>
     <div class="form-group has-feedback">
         <input
                 th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}"/>
@@ -28,3 +31,7 @@
         </div>
     </div>
 </form>
+
+<script type="text/javascript">
+    initCollectionDropdown();
+</script>
