fixed "Create from Template" action for specification objective and stakeholder

--- a/src/main/resources/templates/specificationobjective/addUpdateSpecificationObjective2.html
+++ b/src/main/resources/templates/specificationobjective/addUpdateSpecificationObjective2.html
@@ -6,6 +6,7 @@
       class="form-horizontal" id="add-specification-objective-form" method="post"
       onsubmit="soamFormSubmit(this);return false;">
     <input type="hidden" th:field="*{specification}"/>
+    <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
     <div th:if="${specificationObjective['new'] && collectionType == 'copyTemplate'}" class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
         <div th:replace="~{fragments/templateDropdown :: templateDropdown(${objectiveTemplates})}" />
     </div>
