--- a/src/main/resources/templates/stakeholder/addUpdateStakeholder2.html
+++ b/src/main/resources/templates/stakeholder/addUpdateStakeholder2.html
@@ -6,6 +6,7 @@
       class="form-horizontal" id="add-stakeholder-form" method="post"
       onsubmit="soamFormSubmit(this);return false;">
     <input type="hidden" th:field="*{specification}"/>
+    <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
     <div th:if="${stakeholder['new'] && collectionType == 'copyTemplate'}" class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
         <div th:replace="~{fragments/templateDropdown :: templateDropdown(${stakeholderTemplates})}" />
     </div>
