switched to jquery from webjar

--- a/src/main/resources/templates/specifications/specifications.html
+++ b/src/main/resources/templates/specifications/specifications.html
@@ -2,7 +2,7 @@
 
 <html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body}, ~{::head},'home')}">
 <head>
-    <script type="text/javascript" th:src="@{/resources/js/jquery.min.js}"></script>
+    <script th:src="@{/webjars/jquery/3.6.3/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/resources/js/jstree.min.js}"></script>
     <script type="text/javascript" th:src="@{/resources/js/specifications.js}"></script>
     <script type="text/javascript" th:src="@{/resources/js/collectionDropdown.js}"></script>
